<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">竹溪扶贫大数据中心</string>
    <string name="image_string">img</string>
    
    <!-- 设置 -->
    <string name="action_setting">设 置</string>
    <string name="action_about">关于我们</string>
    <string name="action_textsize_setting">设置字体</string>
    <string name="main_exit_remind">再按一次退出</string>
    <string name="action_clean_app">清理缓存</string>
    <string name="action_exit_login">退出登录</string>
    <string name="dialog_loading_title">正在加载中&#8230;</string>
    
    <!-- MainActivity -->

	<string name="ac_gridview_0">基础信息</string>
	<string name="ac_gridview_1">扶贫大数据</string>
	<string name="ac_gridview_2">统计分析</string>
	<string name="ac_gridview_3">政策资讯</string>
	<string name="ac_gridview_4">特色旅游</string>
	<string name="ac_gridview_5">扶贫项目管理</string>
	<string name="ac_gridview_6">电子地图</string>
	<string name="ac_gridview_7">扶贫考核</string>
	<string name="ac_gridview_8">惠农信息</string>
	<string name="ac_gridview_9">惠农特产</string>
	<string name="ac_gridview_10">设置</string>
	
	<string name="ac_gridview_2_1">贫困户详细信息</string>
	
	 <!-- DynameListView -->
	 
    <string name="refresh_normal">上拉刷新</string>
    <string name="loadmore_normal">下拉刷新</string>
    
    <string name="refresh_will">上拉刷新</string>
    <string name="loadmore_will">松开加载</string>
    
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="loadmoreing">正在加载&#8230;</string>
    
    <string name="refresh_stop">停止刷新</string>
    <string name="loadmore_stop">停止加载</string>
	
    <!-- spinner -->
    <string name="sp_item0">区县</string>
    <string name="sp_item1">成员</string>
    <string name="sp_item2">状态</string>
    
    <!-- 其他 -->
    <string name="tv_0">户主</string>
    <string name="tv_1">成员</string>
    <string name="tv_3">住址</string>
    <string name="tv_with">成员: </string>
    <string name="tv_end">人</string>
    
    <!-- 用户登录 -->
    <string name="login_title">用户登录</string>
    <string name="login_in0">精准扶贫大数据中心</string>
    <string name="login_eth0">手机号/用户名</string>
    <string name="login_eth1">请输入密码</string>
    <string name="login_toa0">登录失败</string>
    <string name="login_toa1">登录成功</string>
    <string name="login_toa2">网络超时</string>
    
    <!-- 搜索 -->
	<string name="action_search">搜索</string>
    <string name="hint_search">输入关键字</string>

     <!-- dialog -->
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_textsize_title">请选择字体大小</string>
    <string name="text_phone">电话:</string>
    <string name="text_chengyuan0">成员:</string>
    <string name="text_chengyuan1">人</string>
    
    <string name="dialog_loading">加载中&#8230;</string>
    <string name="dialog_clean_title">提示</string>
    
    <!-- clean 缓存 -->
    <string name="dialog_clean_msg">是否清理缓存</string>
    <string name="dialog_clean_yes">清理</string>
    
    <string name="dialog_clean_success">清理缓存成功</string>
    
</resources>
