<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_img2"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_marginTop="@dimen/margin_20"
        style="@style/title_bold_textstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@drawable/app_logo"
        android:contentDescription="@string/image_string" />

    <TextView
        style="@style/title_big_textstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/login_in0" />

    <!-- 用户名 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin_small"
                android:background="@drawable/app_icon1"
                android:contentDescription="@string/image_string" />

            <EditText
                android:id="@+id/ac_login_username_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_eth0"
                android:background="@null"
                android:textColorHint="@color/white_alp"
                android:inputType="text" />
            
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white" />
        
    </LinearLayout>
    <!-- 密码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin_small"
                android:background="@drawable/app_icon2"
                android:contentDescription="@string/image_string" />

            <EditText
                android:id="@+id/ac_login_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textColorHint="@color/white_alp"
                android:hint="@string/login_eth1"
                android:inputType="textPassword" />
            
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/ac_login_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_40"
        android:background="@drawable/button_white_selector"
        style="@style/button_textstyle"
        android:text="@string/login_title"/>

</LinearLayout>